2014-11-20  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/CMakeLists.txt: Link against libgcrypt in none mingw case.

2014-11-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Save the path to the NVT directory in the cache hash table.
	This is a considerable memory reduction.

	* base/nvticache.c (nvticache_get): Don't use the full src path
	anymore for the hash table. Use just the NVT path name
	without path to NVT directory.
	(nvticache_get_by_oid_full): No need to drop the NVT directory
	path anymore.
	(nvticache_get_src): Don't return a simple pointer to the full
	patch anymore. Instead build the full filename and then return
	a newly allocated object.

	* base/nvticache.h: Adjust proto accordingly.

2014-11-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/plugutils.c (plug_create_from_nvti_and_prefs): Finally drop
	setting the "OID" element and thus save considerable amount of
	memory.

2014-11-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Replace more cases of using "OID" from arglists by explicit
	oid. This requires some extensive changes.

	* nasl/nasl_misc_funcs.c (simple_register_host_detail): Get the oid
	from the lexic context instead of via arglist.

	* misc/plugutils.c (mark_successful_plugin, mark_post,
	proto_post_wrapped): Add parameter "oid" and use this instead of "OID"
	from the arglist.
	(proto_post_alarm, post_alarm, proto_post_log, post_log,
	proto_post_error, -post_error): Add parameter "oid" and use it for
	subsequent calls.
	(get_plugin_preference): Replace arglist parameter by oid.
 
	* misc/plugutils.h: Adjust protos accordingly.

	* nasl/nasl_scanner_glue.c (script_get_preference,
	script_get_preference_file_content,
	script_get_preference_file_location): Adjust call of
	get_plugin_preference.
	(proto_post_something_t, post_something_t): Adjust to new parameter of
	post functions.
	(security_something): Add oid to calls of post functions.
