@@ -21,7 +21,7 @@
 #ifndef _OPENVAS_SCANNERS_UTILS_H
 #define _OPENVAS_SCANNERS_UTILS_H
 
-int comm_send_status (struct arglist *, char *, char *, int, int);
+int comm_send_status (struct arglist *, char *, int, int);
 unsigned short *getpts (char *, int *);
 
 #endif
